--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "vue": "^3.2.13",
+    "vue-carousel-3d": "^1.0.1",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
